# evid

./: .coverage  .gitignore  .grk_cache.json  .grkrc  .pre-commit-config.yaml  404.html  CLAUDE.md  README.md  SKILL.md  admin.sh  analysis.typ  codefold.txt  design_brief.typ  index.html  mkdocs.yml  pyproject.toml  pytest.ini  test.sh  testci.sh  v1.txt
.github/workflows/: ci.yml  python-package.yml  screenshots.yml
development/: index.html
docs/: development.md  index.md  installation.md  usage.md
docs/assets/: demo.sh
docs/superpowers/specs/: 2026-06-13-vector-search-usefulness-design.md
examples/: english_faker_example.py  recipe.yaml
examples/grounding/: analysis.md  analysis_sub.md  background.md  final_question.md
installation/: index.html
notes/: evidence_manager_demographic_inversion.md  evidence_manager_design.md  evidence_manager_workflows.md  generator_pdfs.md  pop_up_boxes.md  pyside_theme.md  read_loaded_errors.md  typst_clean.md  typst_non_pdf_entries.md  v2.md
references/: integrations.md
scripts/: clean_metadata.py  gui_snapshot.py  prune_singleton_tags.py  refresh-screenshots.sh
search/: search_index.json
src/did/cli/: pseudo.py
src/did/core/: config.py
src/did/core/recognizers/: date_number.py  general_number.py  phone_number.py
src/did/utils/: console.py  entity_utils.py
src/evid/: __init__.py  cli.py
src/evid/cli/: __init__.py  callbacks.py  dataset.py  evidence.py  help.py  main.py
src/evid/core/: bibtex.py  bibtex_utils.py  database.py  dateextract.py  label.py  label_setup.py  models.py  pdf_metadata.py  prompt.py  rebut_doc.py  text_cleaning.py  text_processing.py  typst_generation.py
src/evid/gui/: main.py
src/evid/gui/tabs/: add_evidence.py  browse_evidence.py
src/evid/utils/: text.py
src/vecdb/: cli.py
src/vecdb/utils/: file_utils.py
tests/: conftest.py  test_add_evidence.py  test_anonymizer.py  test_callbacks.py  test_cli.py  test_cli_dataset.py  test_cli_evidence.py  test_cli_main.py  test_core_bibtex.py  test_core_database.py  test_core_label.py  test_core_label_setup.py  test_core_pdf_metadata.py  test_core_rebut_doc.py  test_database.py  test_dateextract.py  test_entity_utils.py  test_evidence.py  test_faker_example.py  test_gdid.py  test_gui_add_evidence.py  test_gui_browse_evidence.py  test_gui_main.py  test_helpers.py  test_init.py  test_label_setup.py  test_rebut_doc.py  test_text_cleaning.py  test_utils_text.py  test_web_to_pdf.py
usage/: index.html
